cabal-version:      2.4
name:               type-level-json
version:            0.1.0.0
synopsis:           Type-level JSON
description:        Type-level lexing, parsing, pretty-pretting, validation, and json serialization generation of JSON schemas
bug-reports:        https://github.com/dmjio/type-level-json/issues
license:            BSD-3-Clause
author:             David Johnson
maintainer:         djohnson.m@gmail.com
copyright:          David Johnson (c) 2022
category:           Web
extra-source-files: CHANGELOG.md

library
  build-depends:
    base >= 4.16 && < 5
  exposed-modules:
    TypeLevel.JSON
  hs-source-dirs:
    src
  default-language:
    Haskell2010
